# 1ForAll

./: .env.example  .gitattributes  .gitignore  README.md  RetailRec_MLOps_Project_Spec.docx  docker-compose.yml  pyproject.toml  tasks.ps1
.claude/: launch.json
docker/: mlflow.Dockerfile
docker/postgres-init/: 01-init.sql
docs/adr/: 0001-dependency-isolation.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DriftPanel.tsx  ExperimentPanel.tsx  LatencyPanel.tsx  Masthead.tsx  ModelPanel.tsx  PipelineRunway.tsx  ProductCard.tsx  ui.tsx
frontend/src/lib/: api.ts  format.ts  mock.ts  types.ts
src/retailrec/: __init__.py  cli.py  config.py
tests/unit/: test_config.py
