[project]
name = "retailrec-mlops"
version = "0.1.0"
description = "End-to-End Retail RecSys MLOps Platform — two-tower retrieval + XGBoost ranking, feature store, drift monitoring, and A/B testing."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Murali Sai Buddakkagari Venkata", email = "murali140824@gmail.com" }]

# Core dependencies — kept light so the base env installs fast and reliably.
# Heavy / conflict-prone libs live in optional groups installed per build phase.
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "loguru>=0.7",
    "pandas>=2.2",
    "numpy>=1.26,<2.1",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Phase 1 — ingestion, validation, distributed feature engineering
data = [
    "pyspark>=3.5,<3.6",
    "great-expectations>=0.18,<0.19",
    "kaggle>=1.6",
    "scikit-learn>=1.4",
]
# Phase 2 — feature store
features = [
    "feast[redis]>=0.40",
]
# Phases 3-5 & 10 — models
ml = [
    "torch>=2.2",
    "xgboost>=2.0",
    "faiss-cpu>=1.8",
    "implicit>=0.7",
    "sentence-transformers>=2.7",
    "scikit-learn>=1.4",
    "onnx>=1.16",
    "onnxruntime>=1.17",
    "shap>=0.45",
]
# Experiment tracking / registry (client side)
tracking = [
    "mlflow>=2.12,<3",
]
# Phase 6-7 — serving API
serving = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "redis>=5.0",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
    "boto3>=1.34",
    "onnxruntime>=1.17",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
]
# Phase 8 — drift monitoring
monitoring = [
    "evidently>=0.4.20,<0.5",
]
# Dev tooling
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "locust>=2.27",
]

[project.scripts]
retailrec = "retailrec.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retailrec"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/retailrec"]
branch = true
